fix overflowing border on info box

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
   border-radius: 50%;
   border: 25px solid #000;
   display: inline-flex;
-  padding: 15px;
+  padding: 20px;
 }
 
 .Clock {
@@ -23,6 +23,7 @@
   margin: auto;
   position: relative;
   width: 600px;
+  padding: 0;
 }
 
 .Clock__seconds,
@@ -73,7 +74,6 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  border: 1.5px solid #000;
 }
 
 .Clock__info__alarm {
@@ -88,6 +88,7 @@
   flex: 1;
   padding: 8px 12px;
   width: 30px;
+  border-top: 1.5px solid black;
 }
 
 .Clock__info__text:first-child {
